# Avaliador_MIT

./: .env.example  .gitignore  README.md  opencode.json  pyproject.toml  requirements.txt
samples/boas/mit41/: .gitkeep
src/avaliador/: __init__.py  __main__.py  cli.py  config.py
src/avaliador/cache/: __init__.py  manager.py
src/avaliador/evaluators/: __init__.py  base.py  mit041.py
src/avaliador/ingestors/: __init__.py  docling_extractor.py  image_filter.py
src/avaliador/knowledge_base/: __init__.py  loader.py  mit041.json  references.py
src/avaliador/knowledge_base/prompts/: bpmn_analysis.txt  mit041_system.txt
src/avaliador/llm/: __init__.py  dta_client.py
src/avaliador/models/: __init__.py  schemas.py
tests/: __init__.py
