[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avaliador"
version = "0.1.0"
description = "Ferramenta CLI para auditoria automatizada de qualidade de MITs TOTVS"
readme = "README.md"
license = {text = "Proprietary - TOTVS Internal Use"}
requires-python = ">=3.10"
authors = [
    {name = "AJoao-totvs", email = "ajoao-totvs@users.noreply.github.com"}
]
keywords = ["totvs", "mit", "quality", "audit", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "docling>=2.68.0",
    "openai>=1.30.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
mcp = [
    "fastmcp>=2.14.0",
]

[project.scripts]
avaliador = "avaliador.cli:app"

[project.urls]
Homepage = "https://github.com/AJoao-totvs/Avaliador_MIT"
Repository = "https://github.com/AJoao-totvs/Avaliador_MIT.git"
Issues = "https://github.com/AJoao-totvs/Avaliador_MIT/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
avaliador = ["knowledge_base/*.json", "knowledge_base/prompts/*.txt"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
